Implement curse components and effects
- Added CurseAttributeComponent for level-based attribute modifications.
- Introduced CurseDamageComponent for periodic damage scaling with level.
- Created CurseParticleComponent to spawn particles around players.
- Developed CursePotionComponent for applying potion effects with level scaling.
- Implemented CurseSoundComponent for playing sounds based on configuration.
- Removed outdated effect components: AttributeModifierEffect, DamageEffect, PotionEffectComponent.
- Added MoonPhaseTrigger and SunlightTrigger for environmental triggers.
- Created TimeTrigger for time-based afflictions.
- Added new curse configurations: Curse of Blindness, Curse of Decay, and Curse of Weakness.
- Updated language files for curse messages.

--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -160,3 +160,10 @@ time:
     waxing-gibbous:
       name: "<#d4c4a8>ᴡᴀxɪɴɢ ɢɪʙʙᴏᴜꜱ"
       symbol: "<#d4c4a8>🌔"
+
+# Curse messages (generic, can be overridden per-curse in YAML)
+curse:
+  applied: "\ ☠ <reset><#666666><bold>ᴄᴜʀꜱᴇᴅ <reset><#6d6d6d>• <white>ʏᴏᴜ ʜᴀᴠᴇ ʙᴇᴇɴ ᴄᴜʀꜱᴇᴅ ᴡɪᴛʜ <#666666><curse><white>!"
+  removed: "\ ✦ <reset><#85bb65><bold>ᴄᴜʀᴇᴅ <reset><#6d6d6d>• <white>ᴛʜᴇ <#666666><curse></reset> <white>ʜᴀꜱ ʙᴇᴇɴ ʟɪꜰᴛᴇᴅ."
+  effect-start: "\ ⚠ <reset><#666666><bold>ᴄᴜʀꜱᴇ <reset><#6d6d6d>• <#6d6d6d>ᴛʜᴇ ᴄᴜʀꜱᴇ ᴛᴀᴋᴇꜱ ʜᴏʟᴅ..."
+  effect-end: "\ ⚠ <reset><#666666><bold>ᴄᴜʀꜱᴇ <reset><#6d6d6d>• <#6d6d6d>ᴛʜᴇ ᴄᴜʀꜱᴇ ᴡᴇᴀᴋᴇɴꜱ ᴍᴏᴍᴇɴᴛᴀʀɪʟʏ..."
